_rendered/apps/postgresdb-user-operator/cilium_io-ciliumnetworkpolicy-networkpolicy-user-operator.yaml
# Source: postgresdb-user-operator/charts/networkpolicy/templates/networkpolicy-preset.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  
  name: networkpolicy-user-operator
spec:
  endpointSelector: 
    matchLabels:
      app.kubernetes.io/instance: postgresdb-user-operator
  ingress:
    - fromEntities:
        - kube-apiserver
        - host
        - remote-node
  egress:
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            custom.network/postgresdb: "ingress"
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
      toPorts:
        - ports:
            - port: "5432"
